Initial commit with modified files

--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Our gaming platform is under construction. Submit your player tag to stay updated.">
-    <meta name="keywords" content="under construction, gaming, player tag, coming soon">
-    <meta property="og:title" content="Coming Soon - Gaming Platform">
-    <meta property="og:description" content="Our gaming platform is under construction. Submit your player tag to stay updated.">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Coming Soon - Gaming Platform">
-    <meta name="twitter:description" content="Our gaming platform is under construction. Submit your player tag to stay updated.">
-    <title>Coming Soon - Gaming Platform</title>
+   
+   
+    <title>Coming Soon</title>
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
